# Fraktale

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
TeX/: Anhang.tex  Einleitung.tex  Fazit.tex  Praktischer-Teil.tex  Theoretischer-Teil.tex  main.tex  quellen.bib
shaders/: FragmentShader.frag  VertexShader.vert
src/: callbacks.h  dearimgui.h  main.cpp  misc.h  shader.cpp  shader.h  types.h  window.h
